modify style apidocs
